--- a/css/basic.css
+++ b/css/basic.css
@@ -1,8 +1,13 @@
 * {
     font-family: 'Jaldi', sans-serif;
-    font-weight: 100;
+    font-weight: 150;
 }
+
 
 body {
     background: rgb(156, 207, 209);
+    color: darkblue;
+}
+h1 {
+    color: #000;
 }
